DDF-4133   On the edge of break-through.   Can set static vars on HttpSolrClientFactory   Next, going to try to access UsernamePassword via OSGI services